@@ -1,0 +1,5 @@
+def foo(a, b, /, c, d):
+    pass
+
+def bar(a, b, /):
+    pass
